# projectMgr

./: .cursorignore  .gitignore  CMakeLists.txt  README.md  RdcProject.iqproj
ProjectMgr/: CMakeLists.txt  ProjectMgr.cpp  ProjectMgr.h
test/: CMakeLists.txt  main.cpp
